# CVsorter

./: AGENTS.md  CONTRIBUTING.md  ColourSorter.pro  DEVELOPER_GUIDE.md  Dockerfile  IMPLEMENTATION_REQUEST_TEMPLATE.md  INSTALL.md  LICENSE  Makefile  QUICK_START.md  README.md  TASKS.md  TESTING.md  USER_MANUAL.md  agents.md  architecture.md  constraints.md  data_model.md  deployment.md  error_model.md  filetree.md  gap_task_bundle.md  openspec.md  protocol.md  pyproject.toml  requirements.txt  run.sh  run_tests.bat  security_model.md  setup.sh  setup_windows.bat  state_model.md  styleguide.md  testing_strategy.md  threading.md  threading_model.md
bench/: bench_runner.c  test_bench_smoke.py
configs/: bench_runtime.yaml  default_config.yaml  lane_geometry.yaml  reject_profiles.yaml
contracts/: frame_schema.json  mcu_response_schema.json  mcu_response_schema_strict.json  pipeline_runtime_config_schema.json  pipeline_telemetry_schema.json  sched_schema.json
data/: manifest.json
docs/: ENGINEERING_GRADE_AUDIT.md  bean_sorting_audit_report.md  bench_controller_transition_audit.md  bench_mode_io_dependencies.md  bench_runtime_config_migration.md  ci_failure_analysis.md  ci_failure_rca.md  coloursorter_fact_finding_report.md  complete_engineering_report.md  config_migration_v4.md  cv_parsing_eval_dataset_spec.md  deep_autonomous_repository_audit_ultra.md  deterministic_execution_roadmap.md  documentation_integrity_audit.md  engineering_audit_next_sprint.md  engineering_audit_sprint_board.md  esp32_multilane_upgrade_plan.md  hardware_readiness_gate.md  high_priority_baseline_bean_sorting_plan.md  high_value_audit_report.md  host_mcu_protocol_divergence_audit.md  human_input_printout.md  industrial_gap_analysis.md  layered_file_analysis_report.json  mcu_target_constraints.md  multistep_routing_architecture_plan.md  openspec.md  openspec_gap_audit.md  overnight_deep_audit_report.md  parallel_safe_backlog_phase1_overlap.md  phase1_beginner_execution_guide.md  phase1_readiness_assessment.md  phase2_completion_tasks.md  phase2_system_integration_audit.md  phase2_tasks.md  phase3_4_5_safe_task_board.md  phase3_feature_discovery.md  phase3_start_assessment.md  phase5_backlog_template.md  phase5_long_run_campaign_spec.md  (+9 more)
firmware/: serial_protocol.cpp  serial_protocol.h  test_serial_protocol.cpp
firmware/mcu/: CMakeLists.txt  README.md
firmware/mcu/cmake/: version_pin.cmake
firmware/mcu/config/: firmware_config.h
firmware/mcu/include/: actuator.h  brownout.h  command_dispatch.h  encoder.h  isr.h  queue.h  safety.h  scheduler.h  watchdog.h
firmware/mcu/reports/: memory_budget.md
firmware/mcu/src/: actuator.c  brownout.c  command_dispatch.c  command_dispatch_test.c  encoder.c  isr.c  main.c  queue.c  safety.c  scheduler.c  watchdog.c
gui/: ui_main_layout.json
qtcreator/: README.md  qtcreator_project.json  run_bench_gui.sh  run_webcam_poc.sh
scripts/: build_test_runner_exe.py  phase5_readiness_plan_check.py  run_acceptance_suite.py  run_phase2_closure_checks.cmd  run_phase2_verification.cmd  run_phase_with_audit.py  run_tests.bat  run_tests.sh  smoke_imports.py  smoke_test.sh  sync_requirements.py  validate_qt_readiness.py
src/: constants.py  yolo_provider.py
test_data/: protocol_frames.json  runtime_config_startup.yaml
tests/: conftest.py  test_bench_controller.py  test_bench_controller_gui.py  test_bench_evaluation.py  test_bench_live_parity.py  test_bench_timebase_sources.py  test_camera.py  test_cli.py  test_dependency_sync.py  test_deploy_failure_modes.py  test_deploy_logging.py  test_detection.py  test_detection_providers.py  test_determinism_and_telemetry.py  test_duplicate_constructor_keywords_check.py  test_eval.py  test_eval_rules.py  test_firmware_core_modules.c  test_firmware_readiness_check.py  (+132 more)
tests/automation/firmware/: CMakeLists.txt  test_firmware_logic_gtest.cpp
(+160 files in other folders)
