[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coloursorter"
version = "0.1.0"
description = "ColourSorter bench and pipeline tooling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "PySide6>=6.6,<7.0",
  "opencv-python>=4.9,<5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
]
lint = [
  "ruff>=0.6,<0.7",
]
dev = [
  "coloursorter[test,lint]",
]

[project.scripts]
coloursorter-bench-gui = "gui.bench_app.app:run"
coloursorter-bench-cli = "coloursorter.bench.scenario_runner:run"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["coloursorter*", "gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
