[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coloursorter"
version = "0.1.0"
description = "Computer vision sorter bench and pipeline tooling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "PySide6>=6.6,<7.0",
  "PySide6-Addons>=6.6,<7.0",
  "PyYAML>=6.0,<7.0",
  "numpy>=1.26,<3.0",
  "opencv-python-headless>=4.9,<5.0",
  "torch>=2.2,<3.0",
]

[project.optional-dependencies]
serial = [
  "pyserial>=3.5,<4.0",
]
test = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
]
lint = [
  "ruff>=0.6,<0.7",
]
dev = [
  "coloursorter[test,lint]",
]

[project.scripts]
coloursorter-bench-gui = "gui.bench_app.app:main"
coloursorter-bench-cli = "coloursorter.bench.scenario_runner:run"
coloursorter-live-runtime = "coloursorter.runtime.live_runner:main"
coloursorter-reject-profiles-gui = "gui.bench_app.reject_profile_manager:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["coloursorter*", "gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
